--- a/pub/css/main.css
+++ b/pub/css/main.css
@@ -67,8 +67,8 @@
 .main_wrap .company_news .company_news_list .new_img{width: 100%;height:210px;border-radius: 24px;overflow: hidden;box-sizing: border-box;}
 .main_wrap .company_news .company_news_list .new_img img{width: 100%;}
 .main_wrap .company_news .company_news_list .new_info {margin-top:24px}
-.main_wrap .company_news .company_news_list .new_info .news_tit{color:var(--black);font-size:16px;font-weight:700;line-height:24px}
-.main_wrap .company_news .company_news_list .new_info .news_desc{color:var(--black);font-size:24px;font-weight:700;line-height: 34px;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;align-self: stretch;text-overflow: ellipsis;overflow: hidden;}
+.main_wrap .company_news .company_news_list .new_info .news_cate{color:var(--black);font-size:16px;font-weight:700;line-height:24px}
+.main_wrap .company_news .company_news_list .new_info .news_tit{color:var(--black);font-size:24px;font-weight:700;line-height: 34px;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;align-self: stretch;text-overflow: ellipsis;overflow: hidden;}
 .main_wrap .company_news .company_news_list .new_info .date{display: block;margin-top:12px;font-size:16px;line-height:24px;color:var(--black)}
 
 .main_wrap .company_info .inner{display: flex; max-width: 1920px;margin:0 auto}
@@ -120,8 +120,8 @@
     .main_wrap .company_news .company_news_list .new_item{width: 337px;}
     .main_wrap .company_news .company_news_list .new_img{height:190px;border-radius:16px;}
     .main_wrap .company_news .company_news_list .new_info {margin-top:20px}
-    .main_wrap .company_news .company_news_list .new_info .news_tit{font-size:14px;line-height:17px}
-    .main_wrap .company_news .company_news_list .new_info .news_desc{font-size:20px;line-height:28px;}
+    .main_wrap .company_news .company_news_list .new_info .news_cate{font-size:14px;line-height:17px}
+    .main_wrap .company_news .company_news_list .new_info .news_tit{font-size:20px;line-height:28px;}
     .main_wrap .company_news .company_news_list .new_info .date{margin-top:12px;font-size:14px;line-height:20px}
 
     .main_wrap .company_info .inner{flex-direction: column;}
@@ -165,8 +165,8 @@
     .main_wrap .company_news .company_news_list .new_item{width: 100%;}
     .main_wrap .company_news .company_news_list .new_img{height:100%;border-radius:12px;}
     .main_wrap .company_news .company_news_list .new_info {margin-top:16px}
-    .main_wrap .company_news .company_news_list .new_info .news_tit{font-size:12px;line-height:20px}
-    .main_wrap .company_news .company_news_list .new_info .news_desc{font-size:18px;line-height:26px;margin-top:8px}
+    .main_wrap .company_news .company_news_list .new_info .news_cate{font-size:12px;line-height:20px}
+    .main_wrap .company_news .company_news_list .new_info .news_tit{font-size:18px;line-height:26px;margin-top:8px}
     .main_wrap .company_news .company_news_list .new_info .date{margin-top:12px;font-size:12px;line-height:14px}
 
     .main_wrap .company_info .info_item{width: 100%;padding:48px 0;background-size: 100% 188px}
