--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -149,6 +149,8 @@ header .lnb_wrap.open{display:block;}
 
     .footer .footer_detail{min-width: auto;font-size:10px;line-height:18px}
     .footer .footer_detail .info_row{flex-wrap: wrap;}
+    .footer .footer_detail .info_row span:last-child{width: 100%;}
+    .footer .footer_detail .info_row span:last-child:before{display: none;}
     .footer .footer_inner{padding:24px;}
     .footer .footer_company{font-size:16px;line-height:24px;}
     .footer .footer_nav{display:none;}
