--- a/pub/css/product.css
+++ b/pub/css/product.css
@@ -9,8 +9,8 @@
    제품소개 페이지
 ----------------------------------- */
 .inner{margin: 64px 120px 36px;}
-.interval_wrap{margin: 0 38px;}
-.interval_wrap.sub{margin-right: 0}
+.interval_wrap{margin: 0 120px;}
+.interval_wrap.sub{margin: 0 16px 0 38px;}
 .inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/product/product_back.png") 100% / 100% no-repeat; max-width: 1680px; height: 452px;}
 .inner_visual .visual_tit{font-size: var(--font48);line-height: normal;color: var(--white);text-align: center;font-weight: 700;}
 
@@ -38,6 +38,7 @@
 /* 1712px  > 1560px 구간 */
 /* 제품 이름 및 소개 */
 .product_tab_panels{margin:0 auto;}
+.product_tab_panels .result_wrap{margin:0 120px;}
 .product_tab_panels .product_tab_result {max-width: 1560px;margin: 0 auto;}
 .product_tab_panels .product_tab_result strong{display:block;font-size:var(--font32);line-height:38px;font-weight:700;color:var(--black);margin-bottom:24px;}
 .product_tab_panels .product_tab_result .result_text{font-size:var(--font18);line-height:28px;color:var(--black);}
@@ -79,8 +80,8 @@
 .product_main_next::before{display: block;content: "";width: 52px;height: 52px;background-size: 52px 52px;background-repeat: no-repeat;background-position: center;background-image: url("data:image/svg+xml,%0A%3Csvg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.5' y='0.5' width='51' height='51' rx='25.5' stroke='black'/%3E%3Cpath d='M31.2969 25.2031C31.7188 25.6719 31.7188 26.375 31.2969 26.7969L23.7969 34.2969C23.3281 34.7656 22.625 34.7656 22.2031 34.2969C21.7344 33.875 21.7344 33.1719 22.2031 32.75L28.9062 26.0469L22.2031 19.2969C21.7344 18.875 21.7344 18.1719 22.2031 17.75C22.625 17.2812 23.3281 17.2812 23.75 17.75L31.2969 25.2031Z' fill='black'/%3E%3C/svg%3E%0A");}
 
 /* 썸네일 라인업 */
-.product_thumb_swiper{width:100%;padding:16px 0;border-radius:20px;background:#fff;}
-.product_thumb_swiper .swiper-wrapper{max-width: 1560px;align-items:stretch;margin:0 auto;}
+.product_thumb_swiper{border-radius:20px;background:#fff;margin-left: 142px;padding-right: 16px;box-sizing: border-box;}
+.product_thumb_swiper .swiper-wrapper{align-items:stretch;}
 /* 추가 */
 .product_thumb_swiper .swiper-slide{display:flex;}
 .product_thumb_swiper .swiper-slide .product_thumb_item{display:flex;flex-direction:column;justify-content:space-between;height:100%;}
@@ -91,7 +92,7 @@
 .product_thumb_item{display:flex;flex-direction:column;align-items:flex-start;width:100%;gap: 16px;}
 .product_thumb_img{display:flex;justify-content: center;width:100%;height:136px;overflow:hidden;}
 .product_thumb_img img{width:136px;height:136px;object-fit:cover;display:block;}
-.product_thumb_name{display: -webkit-box;font-size:var(--font18);line-height:26px;font-weight: 700;text-align: left;word-break: break-all;overflow:hidden;-webkit-line-clamp:2;-webkit-box-orient:vertical;}
+.product_thumb_name{display: -webkit-box;height: 40px;font-size:var(--font18);line-height:26px;font-weight: 700;text-align: left;word-break: break-all;overflow:hidden;-webkit-line-clamp:2;-webkit-box-orient:vertical;}
 
 /* -----------------------------------
    테블릿
@@ -101,21 +102,18 @@
   .inner{margin: 36px 36px 64px;}
   .inner_visual{background: url("../../pub/images/product/product_back_tbl.png") 100% / 100% no-repeat;height: 226px;}
   .inner_visual .visual_tit{font-size: var(--font32);}
-
-  /* 홈 버튼 */
   .inner_content .menu_guide_left_box i.guide_home{width: 16px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='14' viewBox='0 0 16 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.7227 7C15.7227 7.49219 15.3125 7.875 14.8477 7.875H13.9727L14 12.25C14 12.332 14 12.4141 14 12.4688V12.9062C14 13.5352 13.5078 14 12.9062 14H12.4688C12.4141 14 12.3867 14 12.3594 14C12.332 14 12.2773 14 12.25 14H11.375H10.7188C10.0898 14 9.625 13.5352 9.625 12.9062V12.25V10.5C9.625 10.0352 9.21484 9.625 8.75 9.625H7C6.50781 9.625 6.125 10.0352 6.125 10.5V12.25V12.9062C6.125 13.5352 5.63281 14 5.03125 14H4.375H3.5C3.44531 14 3.41797 14 3.36328 14C3.33594 14 3.30859 14 3.28125 14H2.84375C2.21484 14 1.75 13.5352 1.75 12.9062V9.84375C1.75 9.84375 1.75 9.81641 1.75 9.78906V7.875H0.875C0.382812 7.875 0 7.49219 0 7C0 6.75391 0.0820312 6.53516 0.273438 6.34375L7.27344 0.21875C7.46484 0.0273438 7.68359 0 7.875 0C8.06641 0 8.28516 0.0546875 8.44922 0.191406L15.4219 6.34375C15.6406 6.53516 15.75 6.75391 15.7227 7Z' fill='black'/%3E%3C/svg%3E%0A");}
-
-  /* 홈 버튼 옆 > SVG */
   .inner_content .menu_guide_left_box .menu_guide_left_text{font-size: var(--font16);line-height:20px;}
   .inner_content .menu_guide_left_box .menu_guide_left_text::before{width:9px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='9' height='14' viewBox='0 0 9 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.90625 5.1875C6.09375 5.375 6.09375 5.71875 5.90625 5.90625L0.90625 10.9062C0.71875 11.0938 0.375 11.0938 0.1875 10.9062C0 10.7188 0 10.375 0.1875 10.1875L4.84375 5.53125L0.1875 0.90625C0 0.71875 0 0.375 0.1875 0.1875C0.375 0 0.71875 0 0.90625 0.1875L5.90625 5.1875Z' fill='%236E6E6E'/%3E%3C/svg%3E%0A");}
-
-  /* 제품 탭 메뉴 */
   .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:var(--font14);padding: 12px 22px;}
 
   .content_search_box .inner_search_input{font-size: var(--font16);line-height: 20px;padding: 14px 86px 14px 24px;}
-  .product_tab_panels .product_tab_result{margin: 0 180px;}
+
+  .product_tab_panels .result_wrap{margin: 0 38px;}
+  .product_tab_panels .product_tab_result{margin: 0;}
   .product_tab_panels .product_tab_result strong{font-size: var(--font24);line-height:34px;margin-bottom: 12px;}
   .product_tab_panels .product_tab_result .result_text{font-size: var(--font16);line-height:24px;}
+  .interval_wrap{margin: 0 38px;}
   .product_tab_panels .product_card{padding: 24px;gap: 16px;}
   .product_tab_panels .product_card_img{flex:0 0 314px;}
   .product_tab_panels .product_card_info{margin: 0;gap: 12px;}
@@ -124,12 +122,14 @@
   .product_tab_panels .product_card_info .product_card_oem{font-size: var(--font14);line-height: 18px;}
   .product_tab_panels .product_card_spec_list .product_card_spec_item dt strong{font-size: var(--font14);line-height: 26px;}
   .product_tab_panels .product_card_spec_list .product_card_spec_item dd{font-size: var(--font14);line-height: 26px;}
-
   .product_tab_panels .product_card_btn span{font-size: var(--font16); padding: 14px 26px;}
-
   .product_main_prev,
   .product_main_next{display: none !important;}
-  .product_thumb_swiper{}
+  .product_thumb_swiper{margin-left: 0;}
+  .product_thumb_swiper .product_thumb_img{height: 108px;}
+  .product_thumb_swiper .product_thumb_img img{width: 108px;height: 108px;}
+  .product_thumb_swiper .swiper-slide{padding: 12px;}
+  .product_thumb_swiper .product_thumb_name{font-size: var(--font14);line-height:20px;}
 }
 
 
@@ -137,6 +137,44 @@
    모바일
 ----------------------------------- */
 @media (max-width:767px) {
+  .product_intro .contents{padding: 55px 0 36px;}
+  .interval_wrap{margin: 0 16px 0;}
+  .interval_wrap.sub{margin: 0 8px 0 16px;}
+  .inner_content .inner_tab {width: 100%;overflow-x: auto;overflow-y: hidden;}
+  .inner_content .inner_tab::-webkit-scrollbar {display: none;}
 
-  .content_search_box .inner_search_btn::before{width: 14px;height: 14px;background-image: url("data:image/svg+xml, %3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.9375 7.3125C12.9375 5.30859 11.8477 3.48047 10.125 2.46094C8.36719 1.44141 6.22266 1.44141 4.5 2.46094C2.74219 3.48047 1.6875 5.30859 1.6875 7.3125C1.6875 9.35156 2.74219 11.1797 4.5 12.1992C6.22266 13.2188 8.36719 13.2188 10.125 12.1992C11.8477 11.1797 12.9375 9.35156 12.9375 7.3125ZM11.8477 13.0781C10.582 14.0625 9 14.625 7.3125 14.625C3.26953 14.625 0 11.3555 0 7.3125C0 3.30469 3.26953 0 7.3125 0C11.3203 0 14.625 3.30469 14.625 7.3125C14.625 9.03516 14.0273 10.6172 13.043 11.8828L17.4023 16.2422L18 16.8398L16.8047 18L16.207 17.4023L11.8477 13.043V13.0781Z' fill='black'/%3E%3C/svg%3E%0A");}
+  .content_search_box .inner_search_btn::before{width: 14px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.0625 5.6875C10.0625 4.12891 9.21484 2.70703 7.875 1.91406C6.50781 1.12109 4.83984 1.12109 3.5 1.91406C2.13281 2.70703 1.3125 4.12891 1.3125 5.6875C1.3125 7.27344 2.13281 8.69531 3.5 9.48828C4.83984 10.2812 6.50781 10.2812 7.875 9.48828C9.21484 8.69531 10.0625 7.27344 10.0625 5.6875ZM9.21484 10.1719C8.23047 10.9375 7 11.375 5.6875 11.375C2.54297 11.375 0 8.83203 0 5.6875C0 2.57031 2.54297 0 5.6875 0C8.80469 0 11.375 2.57031 11.375 5.6875C11.375 7.02734 10.9102 8.25781 10.1445 9.24219L13.5352 12.6328L14 13.0977L13.0703 14L12.6055 13.5352L9.21484 10.1445V10.1719Z' fill='black'/%3E%3C/svg%3E%0A");}
+  .product_tab_panels .product_card{flex-wrap: wrap;gap: 12px; padding: 16px;}
+  .product_tab_panels .product_card_img{flex: 0 0 204px; margin: 0 auto;}
+  .inner{margin: 24px 24px 36px;}
+  .inner_content .menu_guide_left_box{display: none;}
+  .inner_content .content_tab_box{margin: 22px auto 18px;}
+  .inner_visual{background: url("../../pub/images/product/product_back_mo.png") 100% / 100% no-repeat;height: 136px;}
+
+  .inner_visual .visual_tit{font-size: var(--font18);line-height: 22px;}
+  .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;}
+  .content_search_box .inner_search_input{font-size: var(--font14);line-height: 18px;padding: 12px 82px 12px 22px;}
+  .content_search_box .inner_search_btn{right: 22px;width: 14px;height: 14px;}
+
+  .product_tab_panels .result_wrap{margin: 0 24px;}
+  .product_tab_panels .product_tab_result strong{font-size: var(--font18);line-height: 28px;}
+  .product_tab_panels .product_tab_result .result_text{font-size: var(--font14);line-height: 20px;}
+
+  .product_tab_panels .product_card_info{gap: 8px;}
+  .product_tab_panels .product_card_spec_list{margin: 8px 0;}
+  .product_tab_panels .product_card_spec_item dt strong{width: 100px;}
+  .product_tab_panels .product_card_info .product_card_category_title,
+  .product_tab_panels .product_card_info .product_card_oem,
+  .product_tab_panels .product_card_spec_list .product_card_spec_item dt strong,
+  .product_tab_panels .product_card_spec_list .product_card_spec_item dd{font-size: 13px;line-height: 24px;}
+  .product_tab_panels .product_card_btn span{font-size:var(--font14);line-height: 18px;padding: 12px 22px;}
+
+  .product_thumb_swiper{padding-right: 8px;}
+  .product_thumb_swiper .product_thumb_img{height: 76px;}
+  .product_thumb_swiper .product_thumb_img img{width: 78px;height: 78px;}
+  .product_thumb_swiper .swiper-slide{padding: 8px;border-radius: 8px;}
+  .product_thumb_swiper .swiper-slide .product_thumb_item{gap: 8px;}
+  .product_thumb_swiper .product_thumb_name{font-size: 13px;line-height:18px;}
+
 }
+
