--- a/pub/css/product.css
+++ b/pub/css/product.css
@@ -175,7 +175,7 @@
   .product_tab_panels .product_card_spec_list .product_card_spec_item dd{font-size: 13px;line-height: 24px;}
   .product_tab_panels .product_card_btn span{font-size:var(--font14);line-height: 18px;padding: 12px 22px;}
 
-  .product_thumb_swiper{padding-right: 8px;}
+  .product_thumb_swiper{padding-right: 8px;margin-right: 8px;}
   .product_thumb_swiper .product_thumb_img{height: 76px;}
   .product_thumb_swiper .product_thumb_img img{width: 78px;height: 78px;}
   .product_thumb_swiper .swiper-slide{padding: 8px;border-radius: 8px;}
