--- a/pub/css/pr_center.css
+++ b/pub/css/pr_center.css
@@ -19,7 +19,7 @@
 
 /* 한 줄 */
 .pr_item {border-bottom: 1px solid #e5e5e5;}
-.visual_box{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") 100% / 100% no-repeat; max-width: 1680px; padding:9.559% 0;}
+.visual_box{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") 100% / 100% no-repeat; max-width: 1680px; height:452px}
 
 /* 링크 전체 클릭 영역 */
 .pr_item_link {display: flex;align-items: stretch;padding: 32px 40px;text-decoration: none;color: inherit;}
