--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -140,11 +140,18 @@
 
 
     /*  제품소개 및 홍보센터 등 비주얼 메인  */
+    .inner_content .breadcrumb i.guide_home{width: 16px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='14' viewBox='0 0 16 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.7227 7C15.7227 7.49219 15.3125 7.875 14.8477 7.875H13.9727L14 12.25C14 12.332 14 12.4141 14 12.4688V12.9062C14 13.5352 13.5078 14 12.9062 14H12.4688C12.4141 14 12.3867 14 12.3594 14C12.332 14 12.2773 14 12.25 14H11.375H10.7188C10.0898 14 9.625 13.5352 9.625 12.9062V12.25V10.5C9.625 10.0352 9.21484 9.625 8.75 9.625H7C6.50781 9.625 6.125 10.0352 6.125 10.5V12.25V12.9062C6.125 13.5352 5.63281 14 5.03125 14H4.375H3.5C3.44531 14 3.41797 14 3.36328 14C3.33594 14 3.30859 14 3.28125 14H2.84375C2.21484 14 1.75 13.5352 1.75 12.9062V9.84375C1.75 9.84375 1.75 9.81641 1.75 9.78906V7.875H0.875C0.382812 7.875 0 7.49219 0 7C0 6.75391 0.0820312 6.53516 0.273438 6.34375L7.27344 0.21875C7.46484 0.0273438 7.68359 0 7.875 0C8.06641 0 8.28516 0.0546875 8.44922 0.191406L15.4219 6.34375C15.6406 6.53516 15.75 6.75391 15.7227 7Z' fill='black'/%3E%3C/svg%3E%0A");}
+    .inner_content .breadcrumb .breadcrumb_current{font-size: var(--font16);line-height:20px;}
+    .inner_content .breadcrumb .breadcrumb_current::before{width:9px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='9' height='14' viewBox='0 0 9 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.90625 5.1875C6.09375 5.375 6.09375 5.71875 5.90625 5.90625L0.90625 10.9062C0.71875 11.0938 0.375 11.0938 0.1875 10.9062C0 10.7188 0 10.375 0.1875 10.1875L4.84375 5.53125L0.1875 0.90625C0 0.71875 0 0.375 0.1875 0.1875C0.375 0 0.71875 0 0.90625 0.1875L5.90625 5.1875Z' fill='%236E6E6E'/%3E%3C/svg%3E%0A");}
+    .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:var(--font14);padding: 12px 22px;}
+
     .contents .visual_box{margin: 36px 38px 0;}
     .visual_box .visual_tit{font-size: var(--font32);}
     .contents .visual_inner{height: 226px; padding: 0;}
     .inner_content .section_inner{margin: 0 38px 0;}
     .inner_content .content_tab_box{margin-top: 16px;}
+    .content_search_box{margin: 16px auto 0;}
+
 }
 
 
@@ -189,7 +196,11 @@
     .inner_content .inner_tab::-webkit-scrollbar {display: none;}
     .inner_content .breadcrumb{display: none;}
     .inner_content .content_tab_box{margin: 12px auto 0;}
+    .content_search_box{margin: 8px auto 0;}
     .content_search_box .inner_search_btn::before{width: 14px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.0625 5.6875C10.0625 4.12891 9.21484 2.70703 7.875 1.91406C6.50781 1.12109 4.83984 1.12109 3.5 1.91406C2.13281 2.70703 1.3125 4.12891 1.3125 5.6875C1.3125 7.27344 2.13281 8.69531 3.5 9.48828C4.83984 10.2812 6.50781 10.2812 7.875 9.48828C9.21484 8.69531 10.0625 7.27344 10.0625 5.6875ZM9.21484 10.1719C8.23047 10.9375 7 11.375 5.6875 11.375C2.54297 11.375 0 8.83203 0 5.6875C0 2.57031 2.54297 0 5.6875 0C8.80469 0 11.375 2.57031 11.375 5.6875C11.375 7.02734 10.9102 8.25781 10.1445 9.24219L13.5352 12.6328L14 13.0977L13.0703 14L12.6055 13.5352L9.21484 10.1445V10.1719Z' fill='black'/%3E%3C/svg%3E%0A");}
+    .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;}
+    .content_search_box .inner_search_input{font-size: var(--font14);line-height: 18px;padding: 12px 82px 12px 22px;}
+    .content_search_box .inner_search_btn{right: 22px;width: 14px;height: 14px;}
 
 
 }
